--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 </head>
 <body>
 
+    <div class="cup">
+        <div class="remained" id="remained">
+            <span id="liters">1.5L</span>
+            <small>Remained</small>
+        </div>
+        <div class="percentage" id="percentage">
+            20%
+        </div>
+    </div>
+    <p class="text">Select how many Glasses of Water that you have drink</p>
+
+    <div class="cups">
+        <div class="cup cup-small full">250ml</div>
+        <div class="cup cup-small full">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
+    </div>
     
     <script src="script.js"></script>
 </body>
